--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -115,7 +115,7 @@ footer__menu__settings:
 #-------------------------------
 # Contact Settings
 contact:
-  email: your@email.com # Add your form_id
+  email: alexander.evans04@gmail.com # Add your form_id
   description: I may not respond to every email, but feel free to get in touch using the form below and I will do my best to get back to you.
 
 # NOTE
