--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 #-------------------------------
 # General Site Settings
-baseurl: /cv_site
-url: https://evansae.github.io
+url: https://evansae.com
 
 
 #-------------------------------
